package com.tetras;

public interface iAfficheComponent {
    
    //Interface iAfficheComponent pour l'implémentation du composite
    String affiche();
}