package com.tetras;

public interface iServeurWeb {
    //interface iServeurWeb pour l'implémentation du proxy
    int reponse(RequeteHttpComposite requete);
}